--- a/main.ipynb
+++ b/main.ipynb
@@ -15,228 +15,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>full_name</th>\n",
-       "      <th>age</th>\n",
-       "      <th>birthday</th>\n",
-       "      <th>birthday_GMT</th>\n",
-       "      <th>league</th>\n",
-       "      <th>season</th>\n",
-       "      <th>position</th>\n",
-       "      <th>Current Club</th>\n",
-       "      <th>minutes_played_overall</th>\n",
-       "      <th>minutes_played_home</th>\n",
-       "      <th>...</th>\n",
-       "      <th>conceded_per_90_overall</th>\n",
-       "      <th>min_per_conceded_overall</th>\n",
-       "      <th>min_per_match</th>\n",
-       "      <th>min_per_card_overall</th>\n",
-       "      <th>min_per_assist_overall</th>\n",
-       "      <th>cards_per_90_overall</th>\n",
-       "      <th>rank_in_league_top_attackers</th>\n",
-       "      <th>rank_in_league_top_midfielders</th>\n",
-       "      <th>rank_in_league_top_defenders</th>\n",
-       "      <th>rank_in_club_top_scorer</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Aaron Cresswell</td>\n",
-       "      <td>32</td>\n",
-       "      <td>629712000</td>\n",
-       "      <td>1989/12/15</td>\n",
-       "      <td>Premier League</td>\n",
-       "      <td>2018/2019</td>\n",
-       "      <td>Defender</td>\n",
-       "      <td>West Ham United</td>\n",
-       "      <td>1589</td>\n",
-       "      <td>888</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.25</td>\n",
-       "      <td>72</td>\n",
-       "      <td>79</td>\n",
-       "      <td>1589</td>\n",
-       "      <td>1589</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>290</td>\n",
-       "      <td>191</td>\n",
-       "      <td>80</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Aaron Lennon</td>\n",
-       "      <td>35</td>\n",
-       "      <td>545554800</td>\n",
-       "      <td>1987/04/16</td>\n",
-       "      <td>Premier League</td>\n",
-       "      <td>2018/2019</td>\n",
-       "      <td>Midfielder</td>\n",
-       "      <td>Burnley</td>\n",
-       "      <td>1217</td>\n",
-       "      <td>487</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.48</td>\n",
-       "      <td>61</td>\n",
-       "      <td>76</td>\n",
-       "      <td>1217</td>\n",
-       "      <td>1217</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>196</td>\n",
-       "      <td>187</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Aaron Mooy</td>\n",
-       "      <td>32</td>\n",
-       "      <td>653382000</td>\n",
-       "      <td>1990/09/15</td>\n",
-       "      <td>Premier League</td>\n",
-       "      <td>2018/2019</td>\n",
-       "      <td>Midfielder</td>\n",
-       "      <td>Huddersfield Town</td>\n",
-       "      <td>2327</td>\n",
-       "      <td>1190</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.78</td>\n",
-       "      <td>51</td>\n",
-       "      <td>80</td>\n",
-       "      <td>582</td>\n",
-       "      <td>2327</td>\n",
-       "      <td>0.15</td>\n",
-       "      <td>144</td>\n",
-       "      <td>233</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Aaron Ramsey</td>\n",
-       "      <td>31</td>\n",
-       "      <td>662198400</td>\n",
-       "      <td>1990/12/26</td>\n",
-       "      <td>Premier League</td>\n",
-       "      <td>2018/2019</td>\n",
-       "      <td>Midfielder</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>1327</td>\n",
-       "      <td>689</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.81</td>\n",
-       "      <td>111</td>\n",
-       "      <td>47</td>\n",
-       "      <td>0</td>\n",
-       "      <td>221</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>69</td>\n",
-       "      <td>8</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Aaron Rowe</td>\n",
-       "      <td>22</td>\n",
-       "      <td>968310000</td>\n",
-       "      <td>2000/09/07</td>\n",
-       "      <td>Premier League</td>\n",
-       "      <td>2018/2019</td>\n",
-       "      <td>Forward</td>\n",
-       "      <td>Huddersfield Town</td>\n",
-       "      <td>69</td>\n",
-       "      <td>14</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.30</td>\n",
-       "      <td>69</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 47 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         full_name  age   birthday birthday_GMT          league     season  \\\n",
-       "0  Aaron Cresswell   32  629712000   1989/12/15  Premier League  2018/2019   \n",
-       "1     Aaron Lennon   35  545554800   1987/04/16  Premier League  2018/2019   \n",
-       "2       Aaron Mooy   32  653382000   1990/09/15  Premier League  2018/2019   \n",
-       "3     Aaron Ramsey   31  662198400   1990/12/26  Premier League  2018/2019   \n",
-       "4       Aaron Rowe   22  968310000   2000/09/07  Premier League  2018/2019   \n",
-       "\n",
-       "     position       Current Club  minutes_played_overall  minutes_played_home  \\\n",
-       "0    Defender    West Ham United                    1589                  888   \n",
-       "1  Midfielder            Burnley                    1217                  487   \n",
-       "2  Midfielder  Huddersfield Town                    2327                 1190   \n",
-       "3  Midfielder            Arsenal                    1327                  689   \n",
-       "4     Forward  Huddersfield Town                      69                   14   \n",
-       "\n",
-       "   ...  conceded_per_90_overall min_per_conceded_overall  min_per_match  \\\n",
-       "0  ...                     1.25                       72             79   \n",
-       "1  ...                     1.48                       61             76   \n",
-       "2  ...                     1.78                       51             80   \n",
-       "3  ...                     0.81                      111             47   \n",
-       "4  ...                     1.30                       69             35   \n",
-       "\n",
-       "   min_per_card_overall  min_per_assist_overall  cards_per_90_overall  \\\n",
-       "0                  1589                    1589                  0.06   \n",
-       "1                  1217                    1217                  0.07   \n",
-       "2                   582                    2327                  0.15   \n",
-       "3                     0                     221                  0.00   \n",
-       "4                     0                       0                  0.00   \n",
-       "\n",
-       "   rank_in_league_top_attackers  rank_in_league_top_midfielders  \\\n",
-       "0                           290                             191   \n",
-       "1                           196                             187   \n",
-       "2                           144                             233   \n",
-       "3                            69                               8   \n",
-       "4                            -1                              -1   \n",
-       "\n",
-       "   rank_in_league_top_defenders  rank_in_club_top_scorer  \n",
-       "0                            80                       20  \n",
-       "1                            -1                       10  \n",
-       "2                            -1                        3  \n",
-       "3                            -1                        5  \n",
-       "4                            -1                       31  \n",
-       "\n",
-       "[5 rows x 47 columns]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         full_name    position  goals_overall  assists_overall  \\\n",
+      "0  Aaron Cresswell    Defender              0                1   \n",
+      "1     Aaron Lennon  Midfielder              1                1   \n",
+      "2       Aaron Mooy  Midfielder              3                1   \n",
+      "3     Aaron Ramsey  Midfielder              4                6   \n",
+      "4       Aaron Rowe     Forward              0                0   \n",
+      "\n",
+      "   conceded_overall  yellow_cards_overall  red_cards_overall  \\\n",
+      "0                22                     1                  0   \n",
+      "1                20                     1                  0   \n",
+      "2                46                     4                  0   \n",
+      "3                12                     0                  0   \n",
+      "4                 1                     0                  0   \n",
+      "\n",
+      "   assists_per_90_overall  goals_per_90_overall  total_points  \n",
+      "0                    0.06                  0.00             0  \n",
+      "1                    0.07                  0.07             0  \n",
+      "2                    0.04                  0.12             0  \n",
+      "3                    0.41                  0.27             0  \n",
+      "4                    0.00                  0.00             0  \n"
+     ]
     }
    ],
    "source": [
@@ -246,31 +52,38 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "pl = pd.read_csv('/Users/thomastsangou/Desktop/projects/soccer API/england-premier-league-players-2018-to-2019-stats copy.csv')\n",
-    "pl.head()\n",
-    "\n"
+    "df = pd.read_csv(\"/Users/thomastsangou/Documents/GitHub/Soccer-App/england-premier-league-players-2018-to-2019-stats copy.csv\")\n",
+    "\n",
+    "# select the only relevant columns\n",
+    "df = df[['full_name', 'position', 'goals_overall', 'assists_overall', 'conceded_overall','yellow_cards_overall', 'red_cards_overall', 'assists_per_90_overall', 'goals_per_90_overall']]\n",
+    "\n",
+    "# group the data by position \n",
+    "position_groups = df.groupby('position')\n",
+    "\n",
+    "# define the selection criteria for each position\n",
+    "defenders_criteria = ['goals_overall', 'assists_overall', 'conceded_overall','yellow_cards_overall', 'red_cards_overall']\n",
+    "midfielders_criteria = ['goals_overall', 'assists_overall', 'conceded_overall', 'yellow_cards_overall', 'red_cards_overall', 'assists_per_90_overall', 'goals_per_90_overall']\n",
+    "forwards_criteria = ['goals_overall', 'assists_overall', 'conceded_overall', 'assists_per_90_overall', 'goals_per_90_overall']\n",
+    "\n",
+    "# create empty dictionaries to store  the best players for each position\n",
+    "best_defenders = {}\n",
+    "best_forwards = {}\n",
+    "best_midfielders = {}\n",
+    "\n",
+    "# we will determine the best players by adding up the total number of points for each player\n",
+    "# for midfielders and defenders, yellow cards and red cards will be subtracted from the total points (yellow cards = -1, red cards = -3)\n",
+    "# let's add a column to the dataframe to store the total points for each player\n",
+    "df = df.assign(total_points = 0)\n",
+    "\n",
+    "print(df.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plDf = pd.DataFrame(pl)\n",
-    "\n",
-    "# for midfielders we want: goals, assists, goals involved per 90, goals per 90min, assists per 90 min\n",
-    "# for defenders we want: clean sheets, \n",
-    "# for forwards we want: goals, assists,\n",
-    "\n",
-    "#function to compare stats of midfielders\n",
-    "def midfieldStats():\n",
-    "    #get the midfielders\n",
-    "    midfielders = plDf[plDf['position'] == 'Midfielder']\n",
-    "    print(midfielders.head())\n",
-    "    #get the stats we want\n",
-    "    \n",
-    "\n",
     "\n"
    ]
   },
