--- a/main.ipynb
+++ b/main.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -37,11 +37,11 @@
       "4                 1                     0                  0   \n",
       "\n",
       "   assists_per_90_overall  goals_per_90_overall  total_points  \n",
-      "0                    0.06                  0.00             0  \n",
-      "1                    0.07                  0.07             0  \n",
-      "2                    0.04                  0.12             0  \n",
-      "3                    0.41                  0.27             0  \n",
-      "4                    0.00                  0.00             0  \n"
+      "0                    0.06                  0.00         23.00  \n",
+      "1                    0.07                  0.07         22.14  \n",
+      "2                    0.04                  0.12         50.16  \n",
+      "3                    0.41                  0.27         22.68  \n",
+      "4                    0.00                  0.00          1.00  \n"
      ]
     }
    ],
@@ -74,6 +74,32 @@
     "# for midfielders and defenders, yellow cards and red cards will be subtracted from the total points (yellow cards = -1, red cards = -3)\n",
     "# let's add a column to the dataframe to store the total points for each player\n",
     "df = df.assign(total_points = 0)\n",
+    "\n",
+    "\n",
+    "# iterate over the position groups and calculate the total points for each player\n",
+    "# yellow cards = -1, red cards = -3\n",
+    "for position, group in position_groups:\n",
+    "    if position == 'Defender':\n",
+    "        for index, row in group.iterrows():\n",
+    "            total_points = 0\n",
+    "            for criteria in defenders_criteria:\n",
+    "                total_points += row[criteria]\n",
+    "            total_points -= (row['yellow_cards_overall'] + row['red_cards_overall'] * 3)\n",
+    "            df.at[index, 'total_points'] = total_points\n",
+    "    elif position == 'Midfielder':\n",
+    "        for index, row in group.iterrows():\n",
+    "            total_points = 0\n",
+    "            for criteria in midfielders_criteria:\n",
+    "                total_points += row[criteria]\n",
+    "            total_points -= (row['yellow_cards_overall'] + row['red_cards_overall'] * 3)\n",
+    "            df.at[index, 'total_points'] = total_points\n",
+    "    elif position == 'Forward':\n",
+    "        for index, row in group.iterrows():\n",
+    "            total_points = 0\n",
+    "            for criteria in forwards_criteria:\n",
+    "                total_points += row[criteria]\n",
+    "            df.at[index, 'total_points'] = total_points\n",
+    "\n",
     "\n",
     "print(df.head())\n"
    ]
