--- a/main.ipynb
+++ b/main.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,6 @@
    "source": [
     "\n",
     "#import some libraries\n",
-    "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -63,7 +62,7 @@
     "# define the selection criteria for each position\n",
     "defenders_criteria = ['goals_overall', 'assists_overall', 'conceded_overall','yellow_cards_overall', 'red_cards_overall']\n",
     "midfielders_criteria = ['goals_overall', 'assists_overall', 'conceded_overall', 'yellow_cards_overall', 'red_cards_overall', 'assists_per_90_overall', 'goals_per_90_overall']\n",
-    "forwards_criteria = ['goals_overall', 'assists_overall', 'conceded_overall', 'assists_per_90_overall', 'goals_per_90_overall']\n",
+    "forwards_criteria = ['goals_overall', 'assists_overall', 'assists_per_90_overall', 'goals_per_90_overall','yellow_cards_overall', 'red_cards_overall']\n",
     "\n",
     "# create empty dictionaries to store  the best players for each position\n",
     "best_defenders = {}\n",
@@ -78,20 +77,21 @@
     "\n",
     "# iterate over the position groups and calculate the total points for each player\n",
     "# yellow cards = -1, red cards = -3\n",
+    "# conceded goals for midfielders = -0.5, conceded goals for defenders = -1\n",
     "for position, group in position_groups:\n",
     "    if position == 'Defender':\n",
     "        for index, row in group.iterrows():\n",
     "            total_points = 0\n",
     "            for criteria in defenders_criteria:\n",
     "                total_points += row[criteria]\n",
-    "            total_points -= (row['yellow_cards_overall'] + row['red_cards_overall'] * 3)\n",
+    "            total_points -= (row['yellow_cards_overall'] + row['red_cards_overall'] * 3 + row['conceded_overall'])\n",
     "            df.at[index, 'total_points'] = total_points\n",
     "    elif position == 'Midfielder':\n",
     "        for index, row in group.iterrows():\n",
     "            total_points = 0\n",
     "            for criteria in midfielders_criteria:\n",
     "                total_points += row[criteria]\n",
-    "            total_points -= (row['yellow_cards_overall'] + row['red_cards_overall'] * 3)\n",
+    "            total_points -= (row['yellow_cards_overall'] + row['red_cards_overall'] * 3 + row['conceded_overall']*0.5)\n",
     "            df.at[index, 'total_points'] = total_points\n",
     "    elif position == 'Forward':\n",
     "        for index, row in group.iterrows():\n",
