--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pandas\n",
+      "  Using cached pandas-1.5.2-cp311-cp311-win_amd64.whl (10.3 MB)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\mianakindila tsangou\\appdata\\roaming\\python\\python311\\site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\python311\\lib\\site-packages (from pandas) (2022.7)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in c:\\python311\\lib\\site-packages (from pandas) (1.24.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\mianakindila tsangou\\appdata\\roaming\\python\\python311\\site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "Installing collected packages: pandas\n",
+      "Successfully installed pandas-1.5.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.3 -> 22.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pandas\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -15,19 +49,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         full_name    position  goals_overall  assists_overall  \\\n",
-      "0  Aaron Cresswell    Defender              0                1   \n",
-      "1     Aaron Lennon  Midfielder              1                1   \n",
-      "2       Aaron Mooy  Midfielder              3                1   \n",
-      "3     Aaron Ramsey  Midfielder              4                6   \n",
-      "4       Aaron Rowe     Forward              0                0   \n",
+      "                     full_name    position  goals_overall  assists_overall  \\\n",
+      "0              Aaron Cresswell    Defender              0                1   \n",
+      "1                 Aaron Lennon  Midfielder              1                1   \n",
+      "2                   Aaron Mooy  Midfielder              3                1   \n",
+      "3                 Aaron Ramsey  Midfielder              4                6   \n",
+      "4                   Aaron Rowe     Forward              0                0   \n",
+      "5            Aaron Wan-Bissaka  Midfielder              0                3   \n",
+      "6            Abdelhamid Sabiri  Midfielder              0                0   \n",
+      "7           Abdoulaye Doucouré  Midfielder              5                6   \n",
+      "8             Aboubakar Kamara     Forward              3                0   \n",
+      "9  Adalberto Peñaranda Maestre     Forward              0                0   \n",
       "\n",
       "   conceded_overall  yellow_cards_overall  red_cards_overall  \\\n",
       "0                22                     1                  0   \n",
@@ -35,13 +74,35 @@
       "2                46                     4                  0   \n",
       "3                12                     0                  0   \n",
       "4                 1                     0                  0   \n",
+      "5                41                     5                  1   \n",
+      "6                 3                     0                  0   \n",
+      "7                54                     7                  0   \n",
+      "8                16                     2                  0   \n",
+      "9                 0                     0                  0   \n",
       "\n",
-      "   assists_per_90_overall  goals_per_90_overall  total_points  \n",
-      "0                    0.06                  0.00         23.00  \n",
-      "1                    0.07                  0.07         22.14  \n",
-      "2                    0.04                  0.12         50.16  \n",
-      "3                    0.41                  0.27         22.68  \n",
-      "4                    0.00                  0.00          1.00  \n"
+      "   assists_per_90_overall  goals_per_90_overall  \\\n",
+      "0                    0.06                  0.00   \n",
+      "1                    0.07                  0.07   \n",
+      "2                    0.04                  0.12   \n",
+      "3                    0.41                  0.27   \n",
+      "4                    0.00                  0.00   \n",
+      "5                    0.09                  0.00   \n",
+      "6                    0.00                  0.00   \n",
+      "7                    0.18                  0.15   \n",
+      "8                    0.00                  0.39   \n",
+      "9                    0.00                  0.00   \n",
+      "\n",
+      "   rank_in_league_top_midfielders  total_points  \n",
+      "0                             191          1.00  \n",
+      "1                             187         12.14  \n",
+      "2                             233         27.16  \n",
+      "3                               8         16.68  \n",
+      "4                              -1          0.00  \n",
+      "5                             160         21.59  \n",
+      "6                              -1          1.50  \n",
+      "7                              80         38.33  \n",
+      "8                             412          5.39  \n",
+      "9                              -1          0.00  \n"
      ]
     }
    ],
@@ -51,10 +112,10 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_csv(\"/Users/thomastsangou/Documents/GitHub/Soccer-App/england-premier-league-players-2018-to-2019-stats copy.csv\")\n",
+    "df = pd.read_csv(\"england-premier-league-players-2018-to-2019-stats copy.csv\")\n",
     "\n",
     "# select the only relevant columns\n",
-    "df = df[['full_name', 'position', 'goals_overall', 'assists_overall', 'conceded_overall','yellow_cards_overall', 'red_cards_overall', 'assists_per_90_overall', 'goals_per_90_overall']]\n",
+    "df = df[['full_name', 'position', 'goals_overall', 'assists_overall', 'conceded_overall','yellow_cards_overall', 'red_cards_overall', 'assists_per_90_overall', 'goals_per_90_overall', 'rank_in_league_top_midfielders']]\n",
     "\n",
     "# group the data by position \n",
     "position_groups = df.groupby('position')\n",
@@ -101,7 +162,7 @@
     "            df.at[index, 'total_points'] = total_points\n",
     "\n",
     "\n",
-    "print(df.head())\n"
+    "print(df.head(10))\n"
    ]
   },
   {
@@ -115,10 +176,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               full_name    position  rank_in_league_top_midfielders\n",
+      "341           Leroy Sané  Midfielder                               4\n",
+      "167          Eden Hazard  Midfielder                               5\n",
+      "3           Aaron Ramsey  Midfielder                               8\n",
+      "481          Ryan Fraser  Midfielder                               9\n",
+      "114    Christian Eriksen  Midfielder                              10\n",
+      "..                   ...         ...                             ...\n",
+      "407       Mohamed Elneny  Midfielder                             409\n",
+      "322       Kevin McDonald  Midfielder                             410\n",
+      "122          Conor Coady  Midfielder                             415\n",
+      "205  Georginio Wijnaldum  Midfielder                             416\n",
+      "41        André Schürrle  Midfielder                             417\n",
+      "\n",
+      "[161 rows x 3 columns]\n"
+     ]
+    }
+   ],
    "source": [
+    "midfield_rank = df[(df.rank_in_league_top_midfielders > 0) & (df.position == 'Midfielder')]\n",
+    "something = midfield_rank[['full_name', 'position', 'rank_in_league_top_midfielders']]\n",
+    "print(something.sort_values(by=['rank_in_league_top_midfielders']))\n",
     "\n",
     "\n"
    ]
@@ -184,9 +269,6 @@
     }
    ],
    "source": [
-    "# get the data type of all the columns \n",
-    "result = pl.dtypes\n",
-    "print(result)\n",
     "\n"
    ]
   },
@@ -284,12 +366,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "c261aea317cc0286b3b3261fbba9abdec21eaa57589985bb7a274bf54d6cc0a7"
    }
   }
  },
