--- a/main.ipynb
+++ b/main.ipynb
@@ -2,31 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pandas\n",
-      "  Using cached pandas-1.5.2-cp311-cp311-win_amd64.whl (10.3 MB)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\mianakindila tsangou\\appdata\\roaming\\python\\python311\\site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\python311\\lib\\site-packages (from pandas) (2022.7)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in c:\\python311\\lib\\site-packages (from pandas) (1.24.1)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\mianakindila tsangou\\appdata\\roaming\\python\\python311\\site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
-      "Installing collected packages: pandas\n",
-      "Successfully installed pandas-1.5.2\n",
+      "Requirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (1.5.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/thomastsangou/Library/Python/3.11/lib/python/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pandas) (2022.7)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pandas) (1.24.1)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/thomastsangou/Library/Python/3.11/lib/python/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip available: 22.3 -> 22.3.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -176,27 +164,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "               full_name    position  rank_in_league_top_midfielders\n",
-      "341           Leroy Sané  Midfielder                               4\n",
-      "167          Eden Hazard  Midfielder                               5\n",
-      "3           Aaron Ramsey  Midfielder                               8\n",
-      "481          Ryan Fraser  Midfielder                               9\n",
-      "114    Christian Eriksen  Midfielder                              10\n",
-      "..                   ...         ...                             ...\n",
-      "407       Mohamed Elneny  Midfielder                             409\n",
-      "322       Kevin McDonald  Midfielder                             410\n",
-      "122          Conor Coady  Midfielder                             415\n",
-      "205  Georginio Wijnaldum  Midfielder                             416\n",
-      "41        André Schürrle  Midfielder                             417\n",
-      "\n",
-      "[161 rows x 3 columns]\n"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m midfield_rank \u001b[39m=\u001b[39m df[(df\u001b[39m.\u001b[39mrank_in_league_top_midfielders \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m) \u001b[39m&\u001b[39m (df\u001b[39m.\u001b[39mposition \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mMidfielder\u001b[39m\u001b[39m'\u001b[39m)]\n\u001b[1;32m      2\u001b[0m something \u001b[39m=\u001b[39m midfield_rank[[\u001b[39m'\u001b[39m\u001b[39mfull_name\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mposition\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mrank_in_league_top_midfielders\u001b[39m\u001b[39m'\u001b[39m]]\n\u001b[1;32m      3\u001b[0m \u001b[39mprint\u001b[39m(something\u001b[39m.\u001b[39msort_values(by\u001b[39m=\u001b[39m[\u001b[39m'\u001b[39m\u001b[39mrank_in_league_top_midfielders\u001b[39m\u001b[39m'\u001b[39m])\u001b[39m.\u001b[39mhead(\u001b[39m10\u001b[39m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
      ]
     }
    ],
@@ -204,6 +183,7 @@
     "midfield_rank = df[(df.rank_in_league_top_midfielders > 0) & (df.position == 'Midfielder')]\n",
     "something = midfield_rank[['full_name', 'position', 'rank_in_league_top_midfielders']]\n",
     "print(something.sort_values(by=['rank_in_league_top_midfielders']))\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -366,12 +346,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c261aea317cc0286b3b3261fbba9abdec21eaa57589985bb7a274bf54d6cc0a7"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
